Fix nav alignment with logo text

--- a/src/styles/_mainNavMenu.scss
+++ b/src/styles/_mainNavMenu.scss
@@ -4,7 +4,7 @@
 }
   .mainNavMenu__item {
     margin-right: 3em;
-    margin-top: 29px;
+    margin-top: 26px;
     color: $darkestGray;
     text-decoration: none;
   }
